Modify Person to view cropped images + small fixes menu

--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -28,7 +28,7 @@ $dropdown-padding: none;
 }
 .backgrount-transparent {
   background-color: $main-blue;
-  opacity: 0.85;
+  // opacity: 0.85;
 }
 .sub-menu-item:hover {
   background-color: #daecff;
